# AY21_RADBOT

./: Connection_guide.md  RADBOTScriptSim.mbs  README.md  RoboteqScriptSim_v2.mbs  camcon.py  example_ros_class.cpp  huskysetup.sh  localLidar.sh  radgenerator.py
Control/: RoboteqScriptSim14APR.mbs  RoboteqScriptSim16APR.mbs  RoboteqScriptSim_v3.mbs
Visualize/: basic_shapes.cpp  radsense.py
catkin_ws/src/heatmap/: CMakeLists.txt  package.xml
catkin_ws/src/using_markers/: CMakeLists.txt  package.xml
catkin_ws/src/using_markers/src/: basic_shapes.cpp  example_ros_class.cpp
gvrbot_bringup/: CMakeLists.txt  package.xml
gvrbot_bringup/launch/: bringup.launch
gvrbot_camera/: CMakeLists.txt  package.xml
gvrbot_camera/launch/: rs_d435_camera.launch
gvrbot_cartographer_navigation/: CMakeLists.txt  README.md  package.xml
gvrbot_cartographer_navigation/config/: gvrbot.lua
gvrbot_cartographer_navigation/launch/: cartographer_demo.launch
gvrbot_control/: CMakeLists.txt  package.xml
gvrbot_control/config/: robot_localization.yaml  teleop_xbox.yaml  twist_mux.yaml  xbox.config.yaml
gvrbot_control/launch/: control.launch  teleop.launch  xbox360_teleop.launch
gvrbot_control/src/: control_flip.py
gvrbot_description/: CMakeLists.txt  package.xml
gvrbot_description/launch/: description.launch
gvrbot_description/urdf/: accessories.urdf.xacro  empty.urdf  frameOnlyRobot.xacro  frame_8020.urdf.xacro  gvrbot.gazebo  gvrbot.urdf.xacro
gvrbot_description/urdf/accessories/: bridge_plate.urdf.xacro  camera_mount.urdf.xacro  d435.urdf.xacro  hokuyo_ust10.urdf.xacro  novatel_smart6.urdf.xacro  sick_lms1xx_mount.urdf.xacro  standoffs.urdf.xacro
gvrbot_description/urdf/configs/: base  base.bat  front_flea3  front_flea3.bat  front_laser  front_laser.bat
gvrbot_gazebo/: CMakeLists.txt  README.md  package.xml
gvrbot_gazebo/buildings/: Thayer1stFloor.sdf  Thayer1stFloor3Dv5.sdf
gvrbot_gazebo/launch/: gazebo_client.launch  gvrbot_world.launch  spawn_gvrbot.launch
gvrbot_gazebo/worlds/: example.world  thayer_hall.world
gvrbot_lidar/: CMakeLists.txt  README.md  package.xml
gvrbot_lidar/launch/: VLP16_points.launch  cloud_nodelet.launch  laserscan_nodelet.launch  os1.launch
gvrbot_msgs/: CMakeLists.txt  package.xml
gvrbot_navigation/: CMakeLists.txt  package.xml
gvrbot_navigation/launch/: amcl_demo.launch  gmapping_demo.launch  odom_navigation_demo.launch
gvrbot_navigation/launch/include/: move_base.launch
gvrbot_navigation/maps/: gvrbot_race.yaml
gvrbot_navigation/params/: costmap_common_params.yaml
gvrbot_sensor_test/: CMakeLists.txt  package.xml
gvrbot_sensor_test/config/: jackal.lua
gvrbot_sensor_test/launch/: VLP16_points.launch  cartographer_demo.launch  demo.launch  description.launch  pointcloud_to_laserscan.launch  radbot_world.launch  sensor_test.launch  spawn_radbot.launch  view_model.launch  view_robot.launch
gvrbot_sensor_test/rviz/: sensor_test.rviz
gvrbot_sensor_test/urdf/: base_linkV4.dae  radbot.gazebo  radbot.urdf.xacro
gvrbot_viz/: CMakeLists.txt  package.xml
gvrbot_viz/launch/: view_model.launch  view_robot.launch
gvrbot_viz/rviz/: gmapping.rviz  robot.rviz  sensor_test.rviz  velodyne_test.rviz
gvrbot_web_server/: CMakeLists.txt  package.xml
gvrbot_web_server/launch/: web_server.launch
rad_description/: CMakeLists.txt  package.xml
rad_description/cad/: Flir FL2-020-R0 camera mount block.STL  LIDAR_Ouster_OS1_64Line_Mount.STL  front_realsense_mount.STL  rad_model.scad
rad_description/launch/: description.launch  rad_cartographer_sara_sensors.launch
rad_description/meshes/: 3DM_GX5_35.dae  FL2_020_R0.dae  rad_model.stl  rad_model_w_guards.stl
rad_description/urdf/: URDF_Guide.md  accessories.urdf.xacro  empty.urdf  frameOnlyRobot.xacro  frame_8020.urdf.xacro  rad.urdf.xacro
rad_description/urdf/accessories/: stereo_camera_mount.urdf.xacro
rad_description/urdf/configs/: front_bumblebee2  front_bumblebee2.bat
