<?xml version="1.0"?>
<package>
  <name>gvrbot_control</name>
  <version>0.1.0</version>
  <description>Messages exclusive to the Gvrbot.</description>
  <maintainer email="dominic.larkin@westpoint.edu">Dominic Larkin</maintainer>

  <license>BSD</license>

  <url type="website">http://westpoint.edu/robotics</url>
  <author email="dominic.larkin@westpoint.edu">Dominic Larkin</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>interactive_marker_twist_server</run_depend>
  <run_depend>diff_drive_controller</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>robot_localization</run_depend>
  <run_depend>teleop_twist_joy</run_depend>
  <run_depend>topic_tools</run_depend>
  <run_depend>twist_mux</run_depend>

  <export>
  </export>
</package>
