<?xml version="1.0"?>
<package>
  <name>gvrbot_description</name>
  <version>0.1.0</version>
  <description>URDF robot description for GVRBot</description>
  <maintainer email="dominic.larkin@westpoint.edu">Dominic Larkin</maintainer>

  <license>BSD</license>

  <url type="website">http://westpoint.edu/robotics</url>
  <author email="dominic.larkin@westpoint.edu">Dominic Larkin</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>lms1xx</run_depend>
  <run_depend>pointgrey_camera_description</run_depend>

  <export>
  </export>
</package>
