<?xml version="1.0"?>
<package>
  <name>gvrbot_gazebo</name>
  <version>0.1.0</version>
  <description>Launchfiles to use GVRBot in Gazebo.</description>
  <maintainer email="dominic.larkin@westpoint.edu">Dominic Larkin</maintainer>

  <license>BSD</license>

  <url type="website">http://westpoint.edu/robotics</url>
  <author email="dominic.larkin@westpoint.edu">Dominic Larkin</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>hector_gazebo_plugins</run_depend>
  <run_depend>gvrbot_control</run_depend>
  <run_depend>gvrbot_description</run_depend>

  <export>
    <gazebo_ros gazebo_media_path="${prefix}"/>
  </export>
</package>
