<?xml version="1.0"?>
<package>
  <name>gvrbot_msgs</name>
  <version>0.1.0</version>
  <description>Messages exclusive to the Gvrbot.</description>
  <maintainer email="dominic.larkin@westpoint.edu">Dominic Larkin</maintainer>

  <license>BSD</license>

  <url type="website">http://westpoint.edu/robotics</url>
  <author email="dominic.larkin@westpoint.edu">Dominic Larkin</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
