<?xml version="1.0"?>
<package>
  <name>gvrbot_navigation</name>
  <version>0.1.0</version>
  <description>Launch files and code for autonomous navigation of the GVRBot</description>
  <maintainer email="dominic.larkin@westpoint.edu">Dominic Larkin</maintainer>

  <license>BSD</license>

  <url type="website">http://westpoint.edu/robotics</url>
  <author email="dominic.larkin@westpoint.edu">Dominic Larkin</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>amcl</run_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>

  <export>

  </export>
</package>
