<?xml version="1.0"?>
<package>
  <name>gvrbot_viz</name>
  <version>0.1.0</version>
  <description>URDF robot description for GVRBot</description>
  <maintainer email="dominic.larkin@westpoint.edu">Dominic Larkin</maintainer>

  <license>BSD</license>

  <url type="website">http://westpoint.edu/robotics</url>
  <author email="dominic.larkin@westpoint.edu">Dominic Larkin</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>gvrbot_description</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>rviz</run_depend>

  <export>
  </export>
</package>
